append issues
