# api/swagger.yaml
@@ -187,32 +187,28 @@ paths:
           schema:
             $ref: "#/definitions/Error"
       x-swagger-router-controller: "Chat"
-  /items:
+  /competents:
     get:
       tags:
-      - "Item"
-      description: "Get list of items."
-      operationId: "itemsGET"
-      parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
+      - "Competent"
+      description: "Get list of competents."
+      operationId: "competentsGET"
+      parameters: []
       responses:
         200:
           description: "success"
           schema:
-            $ref: "#/definitions/inline_response_200"
+            $ref: "#/definitions/inline_response_200_3"
         default:
           description: "error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Item"
+      x-swagger-router-controller: "Competent"
     post:
       tags:
-      - "Item"
-      description: "Create new item."
-      operationId: "itemPOST"
+      - "Competent"
+      description: "Create new competent."
+      operationId: "competentsPOST"
       parameters:
       - name: "Authorization"
         in: "header"
@@ -222,23 +218,23 @@ paths:
         name: "body"
         required: true
         schema:
-          $ref: "#/definitions/Item"
+          $ref: "#/definitions/Competent"
       responses:
         200:
           description: "success"
           schema:
-            $ref: "#/definitions/Item"
+            $ref: "#/definitions/Competent"
         default:
           description: "error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Item"
-  /items/{id}:
+      x-swagger-router-controller: "Competent"
+  /competents/{id}:
     put:
       tags:
-      - "Item"
-      description: "Edit item."
-      operationId: "itemPUT"
+      - "Competents"
+      description: "Edit competent."
+      operationId: "competentsPUT"
       parameters:
       - name: "Authorization"
         in: "header"
@@ -253,20 +249,118 @@ paths:
         name: "body"
         required: true
         schema:
-          $ref: "#/definitions/Item"
+          $ref: "#/definitions/Competent"
       responses:
         200:
           description: "success"
           schema:
-            $ref: "#/definitions/Item"
+            $ref: "#/definitions/Competent"
         default:
           description: "error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Item"
+      x-swagger-router-controller: "Competents"
     delete:
       tags:
-      - "Item"
+      - "Competent"
+      description: "Delete competent."
+      operationId: "competentsDELETE"
+      parameters:
+      - name: "Authorization"
+        in: "header"
+        required: true
+        type: "string"
+      - name: "id"
+        in: "path"
+        required: true
+        type: "number"
+        format: "int32"
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/Empty"
+        default:
+          description: "error"
+          schema:
+            $ref: "#/definitions/Error"
+      x-swagger-router-controller: "Competent"
+  /issues:
+    get:
+      tags:
+      - "Issues"
+      description: "Get list of issues."
+      operationId: "issuesGET"
+      parameters: []
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/inline_response_200"
+        default:
+          description: "error"
+          schema:
+            $ref: "#/definitions/Error"
+      x-swagger-router-controller: "Issue"
+    post:
+      tags:
+      - "Issues"
+      description: "Create new item."
+      operationId: "itemPOST"
+      parameters:
+      - name: "Authorization"
+        in: "header"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/Issue"
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/Issue"
+        default:
+          description: "error"
+          schema:
+            $ref: "#/definitions/Error"
+      x-swagger-router-controller: "Issues"
+  /issues/{id}:
+    put:
+      tags:
+      - "Issues"
+      description: "Edit issue."
+      operationId: "issuePUT"
+      parameters:
+      - name: "Authorization"
+        in: "header"
+        required: true
+        type: "string"
+      - name: "id"
+        in: "path"
+        required: true
+        type: "number"
+        format: "int32"
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/Issue"
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/Issue"
+        default:
+          description: "error"
+          schema:
+            $ref: "#/definitions/Error"
+      x-swagger-router-controller: "Issues"
+    delete:
+      tags:
+      - "Issues"
       description: "Delete item."
       operationId: "itemDELETE"
       parameters:
@@ -288,7 +382,7 @@ paths:
           description: "error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Item"
+      x-swagger-router-controller: "Issues"
   /profile:
     get:
       tags:
@@ -338,14 +432,10 @@ paths:
   /ratings:
     get:
       tags:
-      - "Rating"
+      - "Ratings"
       description: "Get list of ratings."
       operationId: "raitingsGET"
-      parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
+      parameters: []
       responses:
         200:
           description: "success"
@@ -355,17 +445,13 @@ paths:
           description: "error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Rating"
+      x-swagger-router-controller: "Ratings"
     post:
       tags:
-      - "Rating"
+      - "Ratings"
       description: "Create new rating."
       operationId: "ratingPOST"
       parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
       - in: "body"
         name: "body"
         required: true
@@ -380,18 +466,14 @@ paths:
           description: "error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Rating"
+      x-swagger-router-controller: "Ratings"
   /ratings/{id}:
     put:
       tags:
-      - "Rating"
+      - "Ratings"
       description: "Edit rating."
       operationId: "ratingPUT"
       parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
       - name: "id"
         in: "path"
         required: true
@@ -411,17 +493,13 @@ paths:
           description: "error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Rating"
+      x-swagger-router-controller: "Ratings"
     delete:
       tags:
-      - "Rating"
+      - "Ratings"
       description: "Delete rating."
       operationId: "ratingDELETE"
       parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
       - name: "id"
         in: "path"
         required: true
@@ -436,18 +514,14 @@ paths:
           description: "error"
           schema:
             $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Rating"
+      x-swagger-router-controller: "Ratings"
   /status:
     get:
       tags:
       - "Status"
       description: "Get list of status."
       operationId: "statusGET"
-      parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
+      parameters: []
       responses:
         200:
           description: "success"
@@ -464,10 +538,6 @@ paths:
       description: "Create new status."
       operationId: "statusPOST"
       parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
       - in: "body"
         name: "body"
         required: true
@@ -490,10 +560,6 @@ paths:
       description: "Edit status."
       operationId: "statusPUT"
       parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
       - name: "id"
         in: "path"
         required: true
@@ -520,10 +586,6 @@ paths:
       description: "Delete status."
       operationId: "statusDELETE"
       parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
       - name: "id"
         in: "path"
         required: true
@@ -539,119 +601,13 @@ paths:
           schema:
             $ref: "#/definitions/Error"
       x-swagger-router-controller: "Status"
-  /tags:
-    get:
-      tags:
-      - "Tag"
-      description: "Get list of tags."
-      operationId: "tagsGET"
-      parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "success"
-          schema:
-            $ref: "#/definitions/inline_response_200_3"
-        default:
-          description: "error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Tag"
-    post:
-      tags:
-      - "Tag"
-      description: "Create new tag."
-      operationId: "tagsPOST"
-      parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
-      - in: "body"
-        name: "body"
-        required: true
-        schema:
-          $ref: "#/definitions/Tag"
-      responses:
-        200:
-          description: "success"
-          schema:
-            $ref: "#/definitions/Tag"
-        default:
-          description: "error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Tag"
-  /tags/{id}:
-    put:
-      tags:
-      - "Tag"
-      description: "Edit tag."
-      operationId: "tagsPUT"
-      parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
-      - name: "id"
-        in: "path"
-        required: true
-        type: "number"
-        format: "int32"
-      - in: "body"
-        name: "body"
-        required: true
-        schema:
-          $ref: "#/definitions/Tag"
-      responses:
-        200:
-          description: "success"
-          schema:
-            $ref: "#/definitions/Tag"
-        default:
-          description: "error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Tag"
-    delete:
-      tags:
-      - "Chat"
-      description: "Delete tag."
-      operationId: "tagsDELETE"
-      parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
-      - name: "id"
-        in: "path"
-        required: true
-        type: "number"
-        format: "int32"
-      responses:
-        200:
-          description: "success"
-          schema:
-            $ref: "#/definitions/Empty"
-        default:
-          description: "error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Chat"
   /tasks:
     get:
       tags:
       - "Task"
       description: "Get list of tasks."
       operationId: "tasksGET"
-      parameters:
-      - name: "Authorization"
-        in: "header"
-        required: true
-        type: "string"
+      parameters: []
       responses:
         200:
           description: "success"
@@ -744,7 +700,7 @@ paths:
             $ref: "#/definitions/Error"
       x-swagger-router-controller: "Task"
 definitions:
-  Tag:
+  Competent:
     type: "object"
     required:
     - "name"
@@ -787,7 +743,7 @@ definitions:
         type: "number"
       author:
         type: "number"
-  Item:
+  Issue:
     type: "object"
     properties:
       name:
@@ -903,7 +859,7 @@ definitions:
       items:
         type: "array"
         items:
-          $ref: "#/definitions/Item"
+          $ref: "#/definitions/Issue"
       pagination:
         $ref: "#/definitions/Pagination"
   inline_response_200_1:
@@ -927,7 +883,7 @@ definitions:
       items:
         type: "array"
         items:
-          $ref: "#/definitions/Tag"
+          $ref: "#/definitions/Competent"
       pagination:
         $ref: "#/definitions/Pagination"
   inline_response_200_4:
