# controllers/ChatService.js
@@ -138,21 +138,3 @@ exports.chatRoomsPOST = function(args, res, next) {
   
 }
 
-exports.tagsDELETE = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * authorization (String)
-  * id (BigDecimal)
-  **/
-    var examples = {};
-  examples['application/json'] = { };
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-}
-
