# controllers/RatingsService.js
@@ -1,6 +1,35 @@
 'use strict';
 
-exports.statusDELETE = function(args, res, next) {
+exports.raitingsGET = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  **/
+    var examples = {};
+  examples['application/json'] = {
+  "pagination" : {
+    "pageCount" : "",
+    "pageSize" : "",
+    "rowCount" : "",
+    "page" : ""
+  },
+  "items" : [ {
+    "id" : 1.3579000000000001069366817318950779736042022705078125,
+    "tag" : 1.3579000000000001069366817318950779736042022705078125,
+    "user" : 1.3579000000000001069366817318950779736042022705078125,
+    "value" : 1.3579000000000001069366817318950779736042022705078125
+  } ]
+};
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.ratingDELETE = function(args, res, next) {
   /**
    * parameters expected in the args:
   * id (BigDecimal)
@@ -17,24 +46,17 @@ exports.statusDELETE = function(args, res, next) {
   
 }
 
-exports.statusGET = function(args, res, next) {
+exports.ratingPOST = function(args, res, next) {
   /**
    * parameters expected in the args:
+  * body (Rating)
   **/
     var examples = {};
   examples['application/json'] = {
-  "pagination" : {
-    "pageCount" : "",
-    "pageSize" : "",
-    "rowCount" : "",
-    "page" : ""
-  },
-  "items" : [ {
-    "item" : 1.3579000000000001069366817318950779736042022705078125,
-    "check" : true,
-    "time" : "aeiou",
-    "user" : 1.3579000000000001069366817318950779736042022705078125
-  } ]
+  "id" : 1.3579000000000001069366817318950779736042022705078125,
+  "tag" : 1.3579000000000001069366817318950779736042022705078125,
+  "user" : 1.3579000000000001069366817318950779736042022705078125,
+  "value" : 1.3579000000000001069366817318950779736042022705078125
 };
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
@@ -46,40 +68,18 @@ exports.statusGET = function(args, res, next) {
   
 }
 
-exports.statusPOST = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * body (Status)
-  **/
-    var examples = {};
-  examples['application/json'] = {
-  "item" : 1.3579000000000001069366817318950779736042022705078125,
-  "check" : true,
-  "time" : "aeiou",
-  "user" : 1.3579000000000001069366817318950779736042022705078125
-};
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-}
-
-exports.statusPUT = function(args, res, next) {
+exports.ratingPUT = function(args, res, next) {
   /**
    * parameters expected in the args:
   * id (BigDecimal)
-  * body (Status)
+  * body (Rating)
   **/
     var examples = {};
   examples['application/json'] = {
-  "item" : 1.3579000000000001069366817318950779736042022705078125,
-  "check" : true,
-  "time" : "aeiou",
-  "user" : 1.3579000000000001069366817318950779736042022705078125
+  "id" : 1.3579000000000001069366817318950779736042022705078125,
+  "tag" : 1.3579000000000001069366817318950779736042022705078125,
+  "user" : 1.3579000000000001069366817318950779736042022705078125,
+  "value" : 1.3579000000000001069366817318950779736042022705078125
 };
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
